<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dialogPopupCornerRadius">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:paddingBottom="30dp"
            android:orientation="vertical"
            android:minWidth="350dp"
            >
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:text="@string/title_about_us"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textSize="@dimen/textSizeH3"
                android:textStyle="bold"
                android:id="@+id/tvDialogTitle"
                android:background="@color/colorPrimary"
                />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/ivAppLogo"
                android:contentDescription="@string/cont_desc_app_logo"
                app:srcCompat="@drawable/ic_app_logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/msg_about_us"
                android:textColor="@color/colorAccent"
                android:textColorLink="@color/colorWhite"
                android:gravity="center"
                android:textSize="@dimen/textSizeH4"
                android:id="@+id/tvAboutUsMsg"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvContactTitle"
                android:layout_marginTop="30dp"
                android:text="@string/title_contact_us"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textSizeH3"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvContactMail"
                android:layout_marginTop="10dp"
                android:text="@string/email_publisher"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textSizeH3"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvSupportTitle"
                android:layout_marginTop="30dp"
                android:text="@string/title_support_us"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textSizeH3"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:layout_marginTop="20dp">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvShare"
                    android:text="@string/title_share"
                    android:gravity="center"
                    style="@style/Theme.KMatrix.ClickableBorderLess"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSizeH3"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvMoreApps"
                    android:text="@string/title_more_apps"
                    android:gravity="center"
                    style="@style/Theme.KMatrix.ClickableBorderLess"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSizeH3"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tvRate"
                    android:text="@string/title_rate"
                    android:gravity="center"
                    style="@style/Theme.KMatrix.ClickableBorderLess"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSizeH3"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>
